--- a/.github/workflows/checkly.yml
+++ b/.github/workflows/checkly.yml
@@ -4,6 +4,8 @@
       push:
         branches:
           - main
+    env:
+        NODE_ENV: dev
     jobs:
       run-checks:
         runs-on: ubuntu-latest
